made links config menu work

--- a/chatbot.links.menu.yml
+++ b/chatbot.links.menu.yml
@@ -8,4 +8,4 @@ chatbot.admin_settings:
     title: 'Chatbot Settings'
     description: 'Chatbot Settings'
     route_name: chatbot.admin_settings
-    parent:  system.hatbot
+    parent:  system.admin_chatbot
